<resources>
    <string name="default_empty_text" translatable="false">-</string>
    <string name="app_name">Chord Trainer</string>
    <string name="start_button">Play︎</string>
    <string name="stop_button">Pause</string>
    <string name="bpm_text_title">BPM</string>
    <string name="next_chord_title">NEXT CHORD</string>
    <string name="key_dropdown_hint">Key</string>
    <string-array name="keys_array">
        <item>C</item>
        <item>Db</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>Gb</item>
        <item>G</item>
        <item>Ab</item>
        <item>A</item>
        <item>Bb</item>
        <item>B</item>
    </string-array>
</resources>