<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wholeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="15dp">
        <LinearLayout
            android:id="@+id/chordGroup"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/currentChordText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/currentChord"
                android:text="@string/default_empty_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:autoSizeTextType="uniform"
                android:text="@string/next_chord_title"
                android:gravity="bottom|center"
                android:textColor="@color/nextChord"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/nextChordText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:autoSizeTextType="uniform"
                android:gravity="top|center"
                android:textColor="@color/nextChord"
                android:text="@string/default_empty_text"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/keySelectorLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/chord_trainer_logo_square"
                android:contentDescription="@string/logo_image_description"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/keyDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="30sp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/key_dropdown_hint"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@color/backgroundSecondary">
        <TextView
            android:id="@+id/bpmText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textAlignment="center"
            android:textColor="@color/bpm"
            android:text="@string/default_empty_text"/>
        <TextView
            android:id="@+id/bpmTitleText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="top"
            android:textColor="@color/bpm"
            android:text="@string/bpm_text_title"/>
        <SeekBar
            android:id="@+id/bpmSeekBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:max="@integer/MAX_BPM"
            android:min="@integer/MIN_BPM"
            android:rotation="-4" />
        <Button
            android:id="@+id/startStopButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/start_button"
            android:textSize="40sp"
            android:background="@color/backgroundButton"
            android:textColor="@color/textButton"/>
    </LinearLayout>

</LinearLayout>
